Revert "cleaning up the physX classes"
This reverts commit 7859140f839d4ea2163eb2193f19e9fd1b1a7894.